--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "main": "background.js",
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "fetch": "^1.1.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
@@ -27,6 +29,7 @@
     "electron": "^6.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-fetch": "^2.6.0",
     "vue-cli-plugin-electron-builder": "^1.4.0",
     "vue-template-compiler": "^2.6.10"
   }
